--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,18 @@
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
     "angular-deckgrid": "~0.4.4",
-    "angular-google-maps": "~1.2.0"
+    "angular-google-maps": "~1.2.0",
+    "ng-scrollbar": "~0.0.5",
+    "ng-tiny-scrollbar": "~0.5.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
     "angular-scenario": "1.2.16",
     "angular-ui-select2": "~0.0.5"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "~1.2.23",
+    "angular-animate": "~1.2.23"
+  }
 }
