--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "appPath": "app",
   "resolutions": {
     "angular": "1.3.0",
-    "angular-animate": "~1.2.23"
+    "angular-animate": "1.3",
+    "angular-google-maps": "~1.2.0"
   }
 }
