--- a/bower.json
+++ b/bower.json
@@ -1,28 +1,23 @@
 {
-  "name": "starc-search",
+  "name": "starc-explore",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.3.0",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16",
-    "angular-route": "1.2.16",
-    "angular-google-maps": "~1.2.0"
-
+    "angular": "^1.3.0",
+    "json3": "^3.3.0",
+    "es5-shim": "^4.0.0",
+    "angular-animate": "^1.3.0",
+    "angular-cookies": "^1.3.0",
+    "angular-messages": "^1.3.0",
+    "angular-resource": "^1.3.0",
+    "angular-route": "^1.3.0",
+    "angular-sanitize": "^1.3.0",
+    "angular-touch": "^1.3.0",
+    "underscore": "~1.7.0",
+    "angular-google-maps": "~2.0.12"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16",
-    "angular-ui-select2": "~0.0.5"
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
   },
-  "appPath": "app",
-  "resolutions": {
-    "angular": "1.3.0",
-    "angular-animate": "1.3",
-    "angular-google-maps": "~1.2.0"
-  }
+  "appPath": "app"
 }
